# commit-msg-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
commit_msg_ai/: __init__.py  cache.py  cli.py  config.py  emoji.py  git_utils.py  interactive.py
commit_msg_ai/providers/: __init__.py  base.py  ollama_provider.py  openai_provider.py
scripts/: install-hook.sh
tests/: test_cache.py  test_cli_generation.py  test_cli_hooks.py  test_cli_main.py  test_emoji.py  test_git_utils.py  test_language.py
