[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-msg-ai"
version = "0.1.0"
description = "AI-generated Conventional Commit messages"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["click>=8.1.0", "pyyaml>=6.0", "requests>=2.31.0", "openai>=1.30.0"]

[project.scripts]
commit-msg-ai = "commit_msg_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["commit_msg_ai*"]
