[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmsg-ai"
version = "0.2.2"
description = "AI-generated Conventional Commit messages from your staged Git diff. Local (Ollama) or cloud (OpenAI)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Weretik18", email = "ruslanmakarov180909@gmail.com" }]
keywords = [
    "git", "commit", "ai", "llm", "ollama", "openai",
    "conventional-commits", "developer-tools", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "openai>=1.30.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Weretik18/commit-msg-ai"
Repository = "https://github.com/Weretik18/commit-msg-ai"
Issues = "https://github.com/Weretik18/commit-msg-ai/issues"

[project.scripts]
gitmsg-ai = "commit_msg_ai.cli:main"
commit-msg-ai = "commit_msg_ai.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "build>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["commit_msg_ai*"]
